# cfgclasses

./: .buildinfo  .gitignore  LICENSE  README.md  __init__.py  __main__.py  api.html  argspec.py  configclass.py  configgroup.py  contribution.html  design.html  fieldtypes.py  genindex.html  getting-started.html  index.html  mypy.ini  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js
.github/workflows/: documentation.yml  python.yml
_sources/: api.rst.txt  contribution.rst.txt  design.rst.txt  getting-started.rst.txt  index.rst.txt
_sources/designs/: submodes.rst.txt  transforms.rst.txt
cfgclasses/: __init__.py  arghelper.py  argspec.py  configclass.py  configgroup.py  fieldtypes.py  transforms.py  validation.py
cfgclasses/test/: test_argspec.py  test_configclass.py  test_deprecated_api.py  test_transforms.py  test_typing.py
designs/: mutually_exclusive_groups.html  submodes.html  transforms.html  validators.html
docs/source/: api.rst  conf.py  design.rst  getting-started.rst  index.rst
docs/source/designs/: mutually_exclusive_groups.rst  submodes.rst  transforms.rst  validators.rst
examples/: mutually_exclusive.py  mutually_exclusive_argparse.py  validation.py  validation_argparse.py
requirements/: dev-requirements.txt
test/: __init__.py  test_argspec.py  test_configclass.py  test_main.py
test/fixtures/: test_config.yaml
